# libfive

./: .gitignore  .libfive_tree.tmp  .travis.yml  BUILDING.md  CHANGELOG.md  CMakeLists.txt  COPYING  COPYING.md  Dockerfile  README  README.md  default.nix  flake.nix  grid.stl  license.txt  out.stl  test.scm
ao/: CMakeLists.txt  core.scm  edit.scm  export.scm  jit.scm  lib.scm  overload.scm  ptr.scm  shapes.scm  startup.scm
ao/bind/: CMakeLists.txt  ao-guile.cpp  ao-guile.h  bundle.cmake  csg.scm  guile.cpp  guile.h  lib.cpp  lib.h  sandbox.scm  shapes.scm  text.scm  transforms.scm  vec.scm
ao/include/ao/: ao.h
ao/src/: CMakeLists.txt  ao.cpp  version.cmake
ao/src/eval/: base.cpp  eval_a.cpp  eval_affine.cpp  eval_array.cpp  eval_d.cpp  eval_deriv.cpp  eval_deriv_array.cpp  eval_f.cpp  eval_feature.cpp  eval_i.cpp  eval_interval.cpp  eval_jacobian.cpp  eval_point.cpp  evaluator.cpp  evaluator_avx.cpp  evaluator_base.cpp  feature.cpp  result.cpp  tape.cpp
ao/src/format/: contours.cpp  image.cpp  mesh.cpp
ao/src/render/: dc.cpp  dc2d.cpp  heightmap.cpp  octree.cpp  quadtree.cpp  region.cpp  subregion.cpp
ao/src/solve/: bounds.cpp  solver.cpp
ao/src/tree/: cache.cpp  opcode.cpp  template.cpp  tree.cpp
ao/test/: CMakeLists.txt  api.cpp  avx.cpp  bind_s7.cpp  bounds.cpp  cache.cpp  contours.cpp  dc.cpp  dual.cpp  eval.cpp  eval_a.cpp  eval_affine.cpp  eval_array.cpp  eval_d.cpp  eval_deriv.cpp  eval_deriv_array.cpp  eval_f.cpp  eval_feature.cpp  eval_i.cpp  eval_interval.cpp  eval_jacobian.cpp  eval_point.cpp  feature.cpp  guile.cpp  heightmap.cpp  interpolator.cpp  lib.cpp  main.cpp  marching.cpp  mesh.cpp  ms.cpp  mt.cpp  octree.cpp  quadtree.cpp  region.cpp  scaffold.cpp  solver.cpp  subregion.cpp  tape.cpp  template.cpp  (+3 more)
ao/test/util/: glm.hpp  shapes.cpp  shapes.hpp
bind/: CMakeLists.txt  api.cpp  api.hpp  guile.cpp  libao.cpp  libao.hpp
bind/guile/: guile.cpp
bind/guile/ao/: bind.scm  bounds.scm  csg.scm  export.scm  jit.scm  operators.scm  overload.scm  ptr.scm  shapes.scm  startup.scm  transforms.scm  user.scm  util.scm
bind/guile/test/: .gitignore  README.md  ao-guile-test.scm  mesh-test-suite.scm
bind/test/: contours.cpp
gui/: CMakeLists.txt  resources.qrc
gui/deploy/mac/: Info.plist  deploy.sh
gui/examples/: bilinsky.ao  klein.ao  menger.ao  taper.ao  tutorial.ao
gui/gl/: arrow.frag  arrow.vert  bars.frag  basic.vert  bbox.frag  bbox.vert  busy.frag  flat.frag  ico.vert  line.frag  line.vert  model.frag  monochrome.frag  point.vert  shaded.frag  shape.frag  shape.vert
gui/include/gui/: app.hpp  arrow.hpp  axes.hpp  background.hpp  bars.hpp  bbox.hpp  busy.hpp  camera.hpp  color.hpp  documentation.hpp  editor.hpp  icosphere.hpp  interpreter.hpp  material.hpp  script.hpp  settings.hpp  shader.hpp  shape.hpp  syntax.hpp  view.hpp  window.hpp
gui/scm/: interpreter.scm
gui/src/: app.cpp  arrow.cpp  axes.cpp  background.cpp  bars.cpp  bbox.cpp  busy.cpp  camera.cpp  color.cpp  documentation.cpp  editor.cpp  icosphere.cpp  interpreter.cpp  main.cpp  material.cpp  script.cpp  settings.cpp  shader.cpp  shape.cpp  syntax.cpp  view.cpp  window.cpp
kernel/: CMakeLists.txt
kernel/src/: CMakeLists.txt
kernel/src/cuda/: accelerator.cu  heightmap.cpp  tape.cu  (+1 more)
kernel/test/: CMakeLists.txt  accelerator.cpp  acelerator.cpp  affine.cpp  avx.cpp  bounds.cpp  cache.cpp  dc.cpp  eval.cpp  glm.hpp  heightmap.cpp  jit.cpp  main.cpp  matrix.cpp  mesh.cpp  octree.cpp  region.cpp  shapes.cpp  shapes.hpp  solver.cpp  subregion.cpp  tree.cpp
lib/: CMakeLists.txt  atom.cpp  atom.h  fab.cpp  fab.h  gradient.h  node.h  opcodes.h  result.h  result.ipp  scm.cpp  scm.h  store.cpp  store.h  token.cpp  token.h  token.hpp  tree.cpp  tree.h  tree.hpp
lib/new/: store.h  token.cpp
lib/src/: CMakeLists.txt  atom.cpp  atom.hpp  heightmap.cpp  heightmap.hpp  image.cpp  image.hpp  region.cpp  region.hpp  result.hpp  result.ipp  scm.cpp  scm.hpp  store.cpp  store.hpp  token.cpp  token.hpp  tree.cpp  tree.hpp  tree.ipp
lib/test/: CMakeLists.txt  accelerator.cpp  avx.cpp  eval.cpp  gl.cpp  heightmap.cpp  heightmap_accel.cpp  jit.cpp  main.cpp  matrix.cpp  octree.cpp  region.cpp  render.ipp  subregion.cpp  texture.cpp
libfive/: CMakeLists.txt  leak.cpp  libfive.pc.in
libfive/bind/: CMakeLists.txt  bundle.cmake  csg.scm  five-guile-console.cpp  libfive-guile.cpp  libfive-guile.h  libfive.scm  sandbox.scm  shapes.scm  text.scm  transforms.scm  util.scm  vec.scm
libfive/include/: libfive.h
libfive/src/: CMakeLists.txt  libfive.cpp  version.cmake
libfive/stdlib/: CMakeLists.txt  README.md  gen.py  gen_c.py  gen_py.py  gen_scm.py  libfive_stdlib.h  parse.py  stdlib.cpp  stdlib.h  stdlib.scm  stdlib_impl.cpp  stdlib_impl.hpp
libfive/test/: CMakeLists.txt  api.cpp  archive.cpp  bounds.cpp  cache.cpp  contours.cpp  curv.cpp  deck.cpp  dual.cpp  eval_array.cpp  eval_deriv.cpp  eval_deriv_array.cpp  eval_feature.cpp  eval_interval.cpp  eval_jacobian.cpp  eval_point.cpp  feature.cpp  guile.cpp  heightmap.cpp  hybrid_meshing.cpp  indexes.cpp  interval.cpp  main.cpp  manifold_tables.cpp  marching.cpp  mesh.cpp  neighbors.cpp  object_pool.cpp  octree.cpp  oracle.cpp  oracle_context.cpp  oracles.hpp  progress.cpp  qef.cpp  quadtree.cpp  region.cpp  simple_tree.cpp  simplex.cpp  simplextree.cpp  solver.cpp  (+9 more)
studio/: CMakeLists.txt  resources.qrc
studio/examples/: bilinsky.io  charm.io  convex-polygon.io  domain_repetition.io  klein.io  koalahedron.io  load.io  menger.io  pawn.io  taper.io  tutorial.io
studio/gl/: arrow.frag  bars.frag  basic.frag  basic.vert  busy.frag  line.vert  outline.frag  outline.geom  outline.vert  shaded.frag
studio/src/: app.cpp  args.cpp  arrow.cpp  axes.cpp  background.cpp  bars.cpp  bbox.cpp  busy.cpp  camera.cpp  color.cpp  documentation.cpp  editor.cpp  icosphere.cpp  interpreter.cpp  language.cpp  main.cpp  platform_darwin.mm  script.cpp  settings.cpp  shader.cpp  shape.cpp  syntax.cpp  view.cpp  window.cpp
ui/: CMakeLists.txt
ui/src/: CMakeLists.txt  task.cpp  watcher.cpp  window.cpp  worker.cpp
ui/test/: CMakeLists.txt  gl.cpp
(+613 files in other folders)
